Corregir el problema de la Tilde - <h:panelGroup>

--- a/src/main/webapp/modulos/solicitudes/fichasolicitud.xhtml
+++ b/src/main/webapp/modulos/solicitudes/fichasolicitud.xhtml
@@ -43,7 +43,7 @@
 							</ul>
 						</div>
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h:outputLabel value="Descripcion:" />
+							<h:outputLabel value="Descripción:" />
 							<h:outputText value=" #{solicitud.descripcion}" />
 						</div>
 					</div>
