--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -3,13 +3,19 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:c="http://java.sun.com/jsp/jstl/core">
+	xmlns:p="http://primefaces.org/ui">
 
-	<h:head>
-	</h:head>
-	
-	<body>
-		<ui:composition template="/resources/plantilla/plantilla.xhtml">
-		</ui:composition>
-	</body>
+<h:head>
+</h:head>
+
+<body>
+	<ui:composition template="/resources/plantilla/plantilla.xhtml">
+		<ui:define name="content">
+			<p:outputPanel>
+				hola
+				<p:button value="Bookmark">Boton</p:button>
+			</p:outputPanel>
+		</ui:define>
+	</ui:composition>
+</body>
 </html>
