--- a/src/main/webapp/modulos/solicitudes/listasolicitudes.xhtml
+++ b/src/main/webapp/modulos/solicitudes/listasolicitudes.xhtml
@@ -51,40 +51,62 @@
 								</div>
 								<div class="tab-pane" id="liquidar">
 									<h:form id='formliquidar'>
-											<ui:repeat var="solicitud" value="#{controllerSolicitud.solicitudesPorEstado('Liquidar')}">
-												<ui:include src="fichasolicitud.xhtml" >
-													<ui:param name="formulario" value="@form :formtodas :formradicar :formaudiencia :formregistrar" />													
+										<ui:repeat varStatus="n" var="solicitud" value="#{controllerSolicitud.solicitudesPorEstado('Liquidar')}" step="2">
+											<div class="row">
+												<ui:include src="fichasolicitud.xhtml"  >
+													<ui:param name="formulario" value="@form :formtodas :formradicar :formaudiencia :formregistrar" />
 												</ui:include>
-											</ui:repeat>
+												<ui:include src="fichasolicitud.xhtml"  >
+													<ui:param name="solicitud" value="#{controllerSolicitud.siguienteFichaPorEstado(n.index)}" />
+													<ui:param name="formulario" value="@form :formtodas :formradicar :formaudiencia :formregistrar" />
+												</ui:include>
+											</div>
+										</ui:repeat>
 									</h:form>
 								</div>
 								<div class="tab-pane" id="radicar">
 									<h:form id='formradicar'>
-
-											<ui:repeat var="solicitud" value="#{controllerSolicitud.solicitudesPorEstado('Radicar')}">
-												<ui:include src="fichasolicitud.xhtml" >
+										<ui:repeat varStatus="n" var="solicitud" value="#{controllerSolicitud.solicitudesPorEstado('Radicar')}" step="2">
+											<div class="row">
+												<ui:include src="fichasolicitud.xhtml"  >
 													<ui:param name="formulario" value="@form :formtodas :formliquidar :formaudiencia :formregistrar" />
 												</ui:include>
-											</ui:repeat>
-
+												<ui:include src="fichasolicitud.xhtml"  >
+													<ui:param name="solicitud" value="#{controllerSolicitud.siguienteFichaPorEstado(n.index)}" />
+													<ui:param name="formulario" value="@form :formtodas :formliquidar :formaudiencia :formregistrar" />
+												</ui:include>
+											</div>
+										</ui:repeat>
 									</h:form>
 								</div>
 								<div class="tab-pane" id="audiencia">
 									<h:form id='formaudiencia'>
-											<ui:repeat var="solicitud" value="#{controllerSolicitud.solicitudesPorEstado('Audiencia')}">
-												<ui:include src="fichasolicitud.xhtml" >
+										<ui:repeat varStatus="n" var="solicitud" value="#{controllerSolicitud.solicitudesPorEstado('Audiencia')}" step="2">
+											<div class="row">
+												<ui:include src="fichasolicitud.xhtml"  >
 													<ui:param name="formulario" value="@form :formtodas :formliquidar :formradicar :formregistrar" />
 												</ui:include>
-											</ui:repeat>
+												<ui:include src="fichasolicitud.xhtml"  >
+													<ui:param name="solicitud" value="#{controllerSolicitud.siguienteFichaPorEstado(n.index)}" />
+													<ui:param name="formulario" value="@form :formtodas :formliquidar :formradicar :formregistrar" />
+												</ui:include>
+											</div>
+										</ui:repeat>
 									</h:form>
 								</div>
 								<div class="tab-pane" id="registrar">
 									<h:form id='formregistrar'>
-											<ui:repeat var="solicitud" value="#{controllerSolicitud.solicitudesPorEstado('Registrar')}">
-												<ui:include src="fichasolicitud.xhtml" >
+										<ui:repeat varStatus="n" var="solicitud" value="#{controllerSolicitud.solicitudesPorEstado('Registrar')}" step="2">
+											<div class="row">
+												<ui:include src="fichasolicitud.xhtml"  >
 													<ui:param name="formulario" value="@form :formtodas :formliquidar :formradicar :formaudiencia" />
 												</ui:include>
-											</ui:repeat>
+												<ui:include src="fichasolicitud.xhtml"  >
+													<ui:param name="solicitud" value="#{controllerSolicitud.siguienteFichaPorEstado(n.index)}" />
+													<ui:param name="formulario" value="@form :formtodas :formliquidar :formradicar :formaudiencia" />
+												</ui:include>
+											</div>
+										</ui:repeat>
 									</h:form>
 								</div>
 							</div>
