Agregar libreria CSS para los furos esilos personalizados de madiba

--- a/src/main/webapp/resources/plantilla/plantilla.xhtml
+++ b/src/main/webapp/resources/plantilla/plantilla.xhtml
@@ -8,7 +8,7 @@
 	<h:outputStylesheet library="css" name="bootstrap.css"></h:outputStylesheet>
 	<h:outputStylesheet library="css" name="AdminLTE.css"></h:outputStylesheet>
 	<h:outputStylesheet library="css" name="_all-skins.css"></h:outputStylesheet>
-	
+	<h:outputStylesheet library="css" name="madiba.css"/>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css"/>
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"/>
 </h:head>
