--- a/src/main/webapp/resources/secciones/header.xhtml
+++ b/src/main/webapp/resources/secciones/header.xhtml
@@ -18,7 +18,7 @@
 	      	</a>
 			<div class="navbar-custom-menu">
 				<ul class="nav navbar-nav">
-					<li class='dropdown'>
+					<!-- <li class='dropdown'>
 			           	<h:form style="width: 162px;" class="sidebar-form">
 				           	<h:panelGroup class="input-group">
 			           			<h:inputText value="Buscar.." class="form-control" />
@@ -29,7 +29,7 @@
 			                    </span>
 				           	</h:panelGroup>
 			           	</h:form>
-			        </li>
+			        </li> -->
 					<li class="dropdown user user-menu">
 						<a href="#"	class="dropdown-toggle"> 
 							<h:graphicImage library="img/png" name="girl.png" class="user-image" alt="User Image" />
