--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Madiba</title>
-		<meta http-equiv="Refresh" content="0; URL=index.jsf">
+		<meta http-equiv="Refresh" content="0; URL=login.jsf">
 	</head>
 	<body>
 	</body>
