--- a/src/main/webapp/modulos/solicitudes/listasolicitudes.xhtml
+++ b/src/main/webapp/modulos/solicitudes/listasolicitudes.xhtml
@@ -57,7 +57,7 @@
 													<ui:param name="formulario" value="@form :formtodas :formradicar :formaudiencia :formregistrar" />
 												</ui:include>
 												<ui:include src="fichasolicitud.xhtml"  >
-													<ui:param name="solicitud" value="#{controllerSolicitud.siguienteFichaPorEstado(n.index)}" />
+													<ui:param name="solicitud" value="#{controllerSolicitud.siguienteFicha(n.index)}" />
 													<ui:param name="formulario" value="@form :formtodas :formradicar :formaudiencia :formregistrar" />
 												</ui:include>
 											</div>
@@ -72,7 +72,7 @@
 													<ui:param name="formulario" value="@form :formtodas :formliquidar :formaudiencia :formregistrar" />
 												</ui:include>
 												<ui:include src="fichasolicitud.xhtml"  >
-													<ui:param name="solicitud" value="#{controllerSolicitud.siguienteFichaPorEstado(n.index)}" />
+													<ui:param name="solicitud" value="#{controllerSolicitud.siguienteFicha(n.index)}" />
 													<ui:param name="formulario" value="@form :formtodas :formliquidar :formaudiencia :formregistrar" />
 												</ui:include>
 											</div>
@@ -87,7 +87,7 @@
 													<ui:param name="formulario" value="@form :formtodas :formliquidar :formradicar :formregistrar" />
 												</ui:include>
 												<ui:include src="fichasolicitud.xhtml"  >
-													<ui:param name="solicitud" value="#{controllerSolicitud.siguienteFichaPorEstado(n.index)}" />
+													<ui:param name="solicitud" value="#{controllerSolicitud.siguienteFicha(n.index)}" />
 													<ui:param name="formulario" value="@form :formtodas :formliquidar :formradicar :formregistrar" />
 												</ui:include>
 											</div>
@@ -102,7 +102,7 @@
 													<ui:param name="formulario" value="@form :formtodas :formliquidar :formradicar :formaudiencia" />
 												</ui:include>
 												<ui:include src="fichasolicitud.xhtml"  >
-													<ui:param name="solicitud" value="#{controllerSolicitud.siguienteFichaPorEstado(n.index)}" />
+													<ui:param name="solicitud" value="#{controllerSolicitud.siguienteFicha(n.index)}" />
 													<ui:param name="formulario" value="@form :formtodas :formliquidar :formradicar :formaudiencia" />
 												</ui:include>
 											</div>
