captcha en Español

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
+<html lang="es" xml:lang="es" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
@@ -31,8 +31,8 @@
 					<p:password styleClass="form-control" value="#{modelLogin.clave}" placeholder="Password" />
 	        		<span class="fa fa-lock form-control-feedback"></span>
 				</div>
-		   		<p:captcha label="Captcha" />
-	  		 	<p:commandButton value="Iniciar Session" styleClass="btn btn-sm btn-primary" actionListener="#{controllerLogin.submit}" ajax="false" icon="ui-icon-check"/>
+		   		<p:captcha label="Captcha" language="es" />
+	  		 	<p:commandButton value="Iniciar Session" styleClass="btn btn-sm btn-primary" actionListener="#{controllerLogin.submit()}" ajax="false" icon="ui-icon-check"/>
 			</h:form>
 		</div>
 	</div>
