--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -31,6 +31,7 @@
 			 <p:outputLabel>Hora:</p:outputLabel>
 			 <p:clock pattern="HH:mm:ss" />
 			 
+			 <p:outputLabel value="#{controllerListaConciliadores.traerApellidoConciliador(1)}"/>
 		</ui:define>
 	</ui:composition>
 </body>
