--- a/src/main/webapp/resources/plantilla/plantilla.xhtml
+++ b/src/main/webapp/resources/plantilla/plantilla.xhtml
@@ -11,6 +11,7 @@
 	<h:outputStylesheet library="css" name="madiba.css"/>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css"/>
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"/>
+  	<link rel="shortcut icon" type="image/x-icon" href="#{resource['img/favicon.ico']}"/>
 </h:head>
 
 <h:body class='skin-blue sidebar-mini wysihtml5-supported'>
