--- a/src/main/webapp/modulos/solicitudes/fichasolicitud.xhtml
+++ b/src/main/webapp/modulos/solicitudes/fichasolicitud.xhtml
@@ -12,7 +12,7 @@
 				<div class="box-header with-border">
 					<h:graphicImage library="img" name="msj-solicitudes.png" style="width:33px;"/>
 					<i> 
-						<h:outputLabel value="Solicitud No." style="font-size:14pt; margin-left:1%"/>
+						<h:outputLabel value="Solicitud No. #{solicitud.id}" style="font-size:14pt; margin-left:1%"/>
 					</i>
 					<h:commandButton class="pull-right btn btn-sm #{controllerSolicitud.colorFicha(solicitud.id,'btn')}" value="#{solicitud.estado}">
 						<f:ajax render="#{formulario}" listener="#{controllerSolicitud.cambiarEstado(this, solicitud.id)}"/>
