Funcional con datos estaticos, funcional base de datos, falta implementar lista con base de datos...

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -17,7 +17,7 @@
 <body>
 	<ui:composition template="/resources/plantilla/plantilla.xhtml">
 		<ui:define name="content">
-			<p:outputPanel>
+			<!-- <p:outputPanel>
 				hola
 				<p:button value="Bookmark">Boton</p:button>
 				<p:inputText id="email" size="40" value="" required="true" pt:type="email" pt:placeholder="Introduzca su email" pt:autofocus="autofocus" />
@@ -36,7 +36,7 @@
 			<c:set var="salary" value="${2000*2}"/>
 			<c:if test="${salary > 2000}">
 			   <p>My salary is:</p>${salary}
-			</c:if>
+			</c:if> -->
 			 
 			 <!-- <p:outputLabel>Lista Conciliadores:</p:outputLabel>
 			 <ui:repeat var="conciliador" value="#{controllerListaConciliadores.listaConciliadores()}">
