--- a/src/main/webapp/modulos/conciliadores/listaconciliadores.xhtml
+++ b/src/main/webapp/modulos/conciliadores/listaconciliadores.xhtml
@@ -5,6 +5,8 @@
 	xmlns:h="http://java.sun.com/jsf/html">
 
 	<h:head>
+		<meta name="description" content="Pull de abogados dispuestos a solucionar problemas mediante la conciliacion" />
+		<meta name="keywords" content="Conciliacion,Conciliador,Despacho,Abogados" />
 	</h:head>
 	
 	<body>
