--- a/src/main/webapp/modulos/solicitudes/listasolicitudes.xhtml
+++ b/src/main/webapp/modulos/solicitudes/listasolicitudes.xhtml
@@ -7,6 +7,8 @@
     xmlns:c="http://java.sun.com/jsp/jstl/core">
 
 <h:head>
+	<meta name="description" content="Formulario de solicitud a conciliacion" />
+	<meta name="keywords" content="Solicitudes,Audiencias,Pagos,Conciliacion" />
 </h:head>
 
 <body>
