--- a/src/main/webapp/resources/secciones/header.xhtml
+++ b/src/main/webapp/resources/secciones/header.xhtml
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html">
-
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:p="http://primefaces.org/ui">
 <h:head></h:head>
 <body>
 	<ui:composition>
@@ -31,7 +31,7 @@
 			           	</h:form>
 			        </li> -->
 					<li class="dropdown user user-menu">
-						<a href="#"	class="dropdown-toggle"> 
+						<a href="#" class="dropdown-toggle"> 
 							<h:graphicImage library="img/png" name="girl.png" class="user-image" alt="User Image" />
 							<span class="hidden-xs">Jenny Marcela</span>
 						</a>
