--- a/src/main/webapp/resources/secciones/header.xhtml
+++ b/src/main/webapp/resources/secciones/header.xhtml
@@ -32,7 +32,8 @@
 			        </li> -->
 					<li class="dropdown user user-menu">
 						<a href="#"	class="dropdown-toggle"> 
-							<h:graphicImage library="img/png" name="girl.png" class="user-image" alt="User Image" />
+							<!--<h:graphicImage library="img/png" name="girl.png" class="user-image" alt="User Image" />-->
+							<img src="http://localhost:8080/Madiba/resources/img/png/girl.png" alt="" class="user-image" />
 							<span class="hidden-xs">Jenny Marcela</span>
 						</a>
 					</li>
