--- a/src/main/webapp/resources/secciones/sidebar.xhtml
+++ b/src/main/webapp/resources/secciones/sidebar.xhtml
@@ -10,7 +10,8 @@
 		<div class="sidebar">
 			<div class="user-panel">
 				<div class="pull-left image">
-					<h:graphicImage library="img/png" name="girl.png" class="img-circle" alt="User Image" />
+					<!--<h:graphicImage library="img/png" name="girl.png" class="user-image" alt="User Image" />-->
+					<img src="http://localhost:8080/Madiba/resources/img/png/girl.png" alt="" class="img-circle img-responsive" />
 				</div>
 				<div class="pull-left info">
 					<p>Jenny Marcela</p>
@@ -24,25 +25,31 @@
 				<!-- Optionally, you can add icons to the links -->
 				<li class="active">
 					<a href="/Madiba/index.jsf">
-						<i class="fa fa-home"></i> 
+						<i class="fa fa-home"></i>
 						<span>Inicio</span>
 					</a>
 				</li>
 				<li class="">
-					<a href="/Madiba/modulos/conciliadores/listaconciliadores.jsf">
-						<i class="fa fa-users"></i> 
+					<a href="/Madiba/modulos/conciliadores/listaconciliadorestabla.jsf">
+						<i class="fa fa-users"></i>
 						<span>Conciliadores</span>
 					</a>
 				</li>
 				<li class="">
+					<a href="/Madiba/modulos/conciliadores/listaconciliadores.jsf">
+						<i class="fa fa-users"></i>
+						<span>Reparto</span>
+					</a>
+				</li>
+				<li class="">
 					<a href="/Madiba/modulos/solicitudes/listasolicitudes.jsf">
-						<i class="fa fa-users"></i> 
+						<i class="fa fa-users"></i>
 						<span>Solicitudes</span>
 					</a>
 				</li>
 				<!-- <li class="treeview">
 					<a href="#">
-						<i class="fa fa-link"></i> 
+						<i class="fa fa-link"></i>
 						<span>Solicitudes</span>
 						<span class="pull-right-container">
 		              		<i class="fa fa-angle-right pull-right"></i>
@@ -51,13 +58,13 @@
 					<ul class="treeview-menu">
 						<li class="">
 							<a href="/Madiba/modulos/solicitudes/listasolicitudes.jsf">
-								<i class="fa fa-link"></i> 
+								<i class="fa fa-link"></i>
 								<span>Lista Solicitudes</span>
 							</a>
 						</li>
 						<li class="">
 							<a href="/Madiba/modulos/solicitudes/designarconciliador.jsf">
-								<i class="fa fa-link"></i> 
+								<i class="fa fa-link"></i>
 								<span>Radicar Solicitud</span>
 							</a>
 						</li>
