--- a/src/main/webapp/resources/plantilla/plantilla.xhtml
+++ b/src/main/webapp/resources/plantilla/plantilla.xhtml
@@ -9,8 +9,10 @@
 	<h:outputStylesheet library="css" name="AdminLTE.css"></h:outputStylesheet>
 	<h:outputStylesheet library="css" name="_all-skins.css"></h:outputStylesheet>
 	<h:outputStylesheet library="css" name="madiba.css"/>
+	<h:outputStylesheet library="css" name="animate.css"/>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css"/>
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"/>
+  	<link rel="shortcut icon" type="image/x-icon" href="#{resource['img/favicon.ico']}"/>
 </h:head>
 
 <h:body class='skin-blue sidebar-mini wysihtml5-supported'>
@@ -30,15 +32,16 @@
 				<ui:include src="/resources/secciones/content.xhtml" />
 			</ui:insert>
 		</div>
-		<!-- <div class='main-footer'>
+		<div class='main-footer'>
 			<ui:insert name="footer">
 				<ui:include src="/resources/secciones/footer.xhtml" />
 			</ui:insert>
-		</div> -->
+		</div>
 	</div>
 	<h:outputScript library="js" name="jquery-2.2.3.min.js" />
 	<h:outputScript library="js" name="bootstrap.js" />
 	<h:outputScript library="js" name="app.js" />
+	<h:outputScript library="js" name="madiba.js" />
 	
 </h:body>
 </html>
