--- a/src/main/webapp/modulos/solicitudes/fichasolicitud.xhtml
+++ b/src/main/webapp/modulos/solicitudes/fichasolicitud.xhtml
@@ -76,15 +76,15 @@
 				</h:panelGroup>
 						        
 		        <div class='box-footer #{controllerSolicitud.seleccionarSolicitud(solicitud.select)}'>
-		          	<div class="col-lg-5 col-sm-12 col-xs-12">
+		          	<div class="col-lg-5">
 			            <h:outputLabel value="Pretenciones:" />
 			            <h:outputText value=" $#{solicitud.pretenciones}" />
 		          	</div>
-		          	<div class="col-lg-5 col-sm-10 col-xs-10">
+		          	<div class="col-lg-4">
 			            <h:outputLabel value="Solicitud:" />
 			            <h:outputText value=" #{solicitud.solicitud}" />
 		          	</div>
-		          	<div class="col-lg-2 col-sm-2 col-xs-2">
+		          	<div class="col-lg-3">
 		          		<p:outputLabel value="#{solicitud.estado}" styleClass="label label#{controllerSolicitud.colorFicha(solicitud.id,'')} pull-right" />
 		          	</div>
 		        </div>
