--- a/src/main/webapp/modulos/solicitudes/listasolicitudestab.xhtml
+++ b/src/main/webapp/modulos/solicitudes/listasolicitudestab.xhtml
@@ -9,29 +9,31 @@
 <body>
 	<ui:composition template="/resources/plantilla/plantilla.xhtml">
 		<ui:define name="content">
-			<div class="content">
-				<div class="row">
-					<div class="col-md-12">
-						<p:tabView orientation="right">
-							<p:tab title="Godfather Part I">
-								<h:panelGrid columns="2" cellpadding="10">
-									<p:graphicImage name="demo/images/godfather/godfather1.jpg" />
-									<h:outputText value="The story begins as Don Vito Corleone..." />
-								</h:panelGrid>
-							</p:tab>
-							<p:tab title="Godfather Part II">
-								<h:panelGrid columns="2" cellpadding="10">
-									<p:graphicImage name="demo/images/godfather/godfather2.jpg" />
-									<h:outputText value="Francis Ford Coppola's legendary..." />
-								</h:panelGrid>
-							</p:tab>
-							<p:tab title="Godfather Part III">
-								<h:panelGrid columns="2" cellpadding="10">
-									<p:graphicImage name="demo/images/godfather/godfather3.jpg" />
-									<h:outputText value="After a break of more than 15 years..." />
-								</h:panelGrid>
-							</p:tab>
-						</p:tabView>
+			<div class='content-wrapper' style="height:10px;overflow:auto">
+				<div class="content">
+					<div class="row">
+						<div class="col-md-12">
+							<p:tabView orientation="right">
+								<p:tab title="Godfather Part I">
+									<h:panelGrid columns="2" cellpadding="10">
+										<p:graphicImage name="demo/images/godfather/godfather1.jpg" />
+										<h:outputText value="The story begins as Don Vito Corleone..." />
+									</h:panelGrid>
+								</p:tab>
+								<p:tab title="Godfather Part II">
+									<h:panelGrid columns="2" cellpadding="10">
+										<p:graphicImage name="demo/images/godfather/godfather2.jpg" />
+										<h:outputText value="Francis Ford Coppola's legendary..." />
+									</h:panelGrid>
+								</p:tab>
+								<p:tab title="Godfather Part III">
+									<h:panelGrid columns="2" cellpadding="10">
+										<p:graphicImage name="demo/images/godfather/godfather3.jpg" />
+										<h:outputText value="After a break of more than 15 years..." />
+									</h:panelGrid>
+								</p:tab>
+							</p:tabView>
+						</div>
 					</div>
 				</div>
 			</div>
