--- a/src/main/webapp/resources/plantilla/plantilla.xhtml
+++ b/src/main/webapp/resources/plantilla/plantilla.xhtml
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css"/>
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"/>
   	<link rel="shortcut icon" type="image/x-icon" href="#{resource['img/favicon.ico']}"/>
+	
 </h:head>
 
 <h:body class='skin-blue sidebar-mini wysihtml5-supported'>
@@ -27,16 +28,20 @@
 				<ui:include src="/resources/secciones/sidebar.xhtml" />
 			</ui:insert>
 		</div>
+		
 		<div class='content-wrapper' style="height:10px;overflow:auto">
 			<ui:insert name="content">
 				<ui:include src="/resources/secciones/content.xhtml" />
 			</ui:insert>
 		</div>
-		<div class='main-footer'>
+		
+		
+		<div class='main-footer' style="height: 43.11111px;">
 			<ui:insert name="footer">
 				<ui:include src="/resources/secciones/footer.xhtml" />
 			</ui:insert>
 		</div>
+		
 	</div>
 	<h:outputScript library="js" name="jquery-2.2.3.min.js" />
 	<h:outputScript library="js" name="bootstrap.js" />
